[package]
name = "english-wiki-frequency-list"
version = "0.1.0"
authors = ["Bence Meszaros <bence.me@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
rayon = "1.3.1"
bzip2 = "0.4.1"
regex = "1.3.9"
# deunicode = "1.1.1"
roxmltree = "0.13.0"
indicatif = { version="0.15.0", features = ["rayon"] }
fnv = "1.0.7"
jemallocator = "0.3.2"

[profile.release]
lto = true
codegen-units = 1
